--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.15.2",
         "sass-loader": "^7.1.0",
-        "vue": "^2.5.17",
+        "vue": "^2.6.10",
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
-        "admin-lte": "^3.0.0-alpha.2",
-        "font-awesome-sass": "^4.7.0"
+        "admin-lte": "^3.0.0-beta.2",
+        "font-awesome-sass": "^4.7.0",
+        "router": "^1.3.3",
+        "vue-router": "^3.1.0"
     }
 }
