--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     },
     "devDependencies": {
         "@fortawesome/fontawesome-free": "^5.10.1",
-        "axios": "^0.19",
+        "axios": "^0.19.0",
         "bootstrap": "^4.1.0",
         "cross-env": "^5.1",
         "jquery": "^3.2",
@@ -27,7 +27,10 @@
     "dependencies": {
         "admin-lte": "^3.0.0-beta.2",
         "font-awesome-sass": "^4.7.0",
+        "moment": "^2.24.0",
         "router": "^1.3.3",
-        "vue-router": "^3.1.0"
+        "vform": "^1.0.1",
+        "vue-progressbar": "^0.7.5",
+        "vue-router": "^3.1.1"
     }
 }
