--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "font-awesome-sass": "^4.7.0",
         "moment": "^2.24.0",
         "router": "^1.3.3",
+        "sweetalert2": "^8.16.2",
         "vform": "^1.0.1",
         "vue-progressbar": "^0.7.5",
         "vue-router": "^3.1.1"
