--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
         "@fortawesome/fontawesome-free": "^5.10.2",
         "axios": "^0.19.0",
         "bootstrap": "^4.1.0",
-        "cross-env": "^5.1",
+        "cross-env": "^5.2.1",
         "jquery": "^3.2",
         "laravel-mix": "^4.0.7",
         "lodash": "^4.17.13",
@@ -25,13 +25,14 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
-        "admin-lte": "^3.0.0-beta.2",
+        "admin-lte": "^3.0.0-rc.1",
         "font-awesome-sass": "^4.7.0",
+        "laravel-vue-pagination": "^2.3.0",
         "moment": "^2.24.0",
         "router": "^1.3.3",
-        "sweetalert2": "^8.16.2",
+        "sweetalert2": "^8.17.1",
         "vform": "^1.0.1",
         "vue-progressbar": "^0.7.5",
-        "vue-router": "^3.1.1"
+        "vue-router": "^3.1.3"
     }
 }
